# newnepal-meta

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  WELCOME.md  jawafdehi-meta.code-workspace  newnepal-meta.code-workspace  notes.md
.amazonq/rules/: 00-core.md
.github/: copilot-instructions.md
.kiro/agents/: code-researcher.md  project-analyst.md
.kiro/steering/: product.md  structure.md  tech.md
assets/: font
docs/: CONTRIBUTOR_WORKFLOWS.md  GETTING_STARTED.md  nes
docs/2026-01-04-nepal govt second strategy notes/: 2026-01-13-announcement.md  our-feedback.docx  our-feedback.md
docs/2026-01-16-jawafdehi-accountability-framework/: Jawafdehi.org presentation - draft.key  Jawafdehi.org presentation.key  jawafdehi-and-accountability-framework-3.md  starting-points.md
docs/2026-01-16-presentation/: jawafdehi-overview.md  jawafdehi-stakeholder-presentation.md  overview.md
docs/2026-03-03-nesq/: implementation_plan.md  manual-e2e-test-add-prachanda-alias.md  nesq_action_specs.md
docs/2082-candidate-sourcing/: notes.md
docs/agent-kit/: README.md  prompt.md
docs/agni/: flow.md
docs/case-research/: case-entry-template  important-links.md
docs/entities-list/: Directory of Government Offices in Nepal.docx  google.md  govt.md  openai2.md  prompt.md  taxonomy.md
docs/incorporation/: jawafdehi-nepal-incorporation-research.md
docs/likhit/: design.md
tools/: clear_database.py  date_converter.py  pyproject.toml  seed_contributors.py
tools/2026-02-26-github-branch-protection/: github-branch-protection.sh  protection-status.md
(+395 files in other folders)
